# rust_seq

./: .gitignore  Cargo.toml  README.md  input.fasta  input.fastq
src/: lib.rs  main.rs
