[package]
name = "rust_seq"
version = "0.1.0"

authors = ["Eric Normandeau <eric.normandeau.qc@gmail.com>"]
licence = "MIT/Apache-2.0"
description = "Get readable/writable fasta and fastq files from filenames (including gzip compressed)"
repository = "https://www.github.com/enormandeau/bio-seq"
keywords = ["fasta", "fastq", "bioinformatics", "dna", "sequences", "compression", "gzip"]
categories = ["encoding", "parsing", "science"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1", features = ["tokio"] }
bio = "*"
